# xcov

./: CONTRIBUTING.md  PKG-INFO  README.md  ddt2.py  setup.cfg  setup.py
dcovr/: increment_generator.py
gcovr/tests/csv/reference/: coverage.csv
test/: test_example.py  test_functional.py
xcov/: __main__.py  html_generator.py
