[metadata]
description = Generate C/C++ code coverage reports with gcov
long_description = file: README.rst, AUTHORS.txt
license = BSD
license_file = LICENSE.md

url = https://www.ksyun.com/
project_urls =
    Github        = https://github.com/juewuer/xcov
    Issue Tracker = https://github.com/juewuer/xcov/issues

maintainer = juewuer
maintainer_email = lihechao@gmail.com
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Utilities

keywords = gcc, gcov, lcov, coverage, Jenkins, Cobertura
[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0

[coverage:report]
exclude_lines =
    [#]\s*pragma: no cover

    ^\s*raise AssertionError\b
    ^\s*raise NotImplementedError\b
    ^\s*assert False\b
